--- a/src/str/index/index.less
+++ b/src/str/index/index.less
@@ -135,6 +135,15 @@ input {
   margin:27/@rem 0;
   font-size: 24/@rem;
 }
+.foot{
+  float: left;
+  width: 100%;
+  border-top: 1/@rem solid #999;
+  color: #666;
+  text-align: center;
+  line-height: 0/@rem;
+  margin:40/@rem 0 60/@rem 0;
+}
 
 
 
