--- a/src/str/index/index.less
+++ b/src/str/index/index.less
@@ -183,8 +183,22 @@ header{
 .login1{
   margin-left: 14/@rem;
 }
-
-
+.swiper-container {
+  width: 750/@rem;
+  height: 280/@rem;
+}
+.swiper-slide{
+  width: 750/@rem;
+  img{
+    float: left;
+    width: 100%;
+    height: 100%;
+  }
+}
+.swiper-pagination-bullet-active {
+  opacity: 1;
+  background: #CC3333;
+}
 
 
 
