--- a/src/str/index/index.less
+++ b/src/str/index/index.less
@@ -185,7 +185,7 @@ header{
 }
 .swiper-container {
   width: 750/@rem;
-  height: 340/@rem;
+  height: 300/@rem;
 }
 .swiper-slide{
   width: 750/@rem;
@@ -199,7 +199,26 @@ header{
   opacity: 1;
   background: #CC3333;
 }
-
+.slide{
+  float: left;
+  width: 100%;
+}
+.slide-li{
+  float: left;
+  width: 25%;
+  margin-top: 27/@rem;
+  text-align: center;
+}
+.slide-li-img{
+  width: 88/@rem;
+}
+.slide-li-text{
+  float: left;
+  width: 100%;
+  text-align: center;
+  margin-top: 8/@rem;
+  color: #666;
+}
 
 
 
