--- a/src/str/index/index.less
+++ b/src/str/index/index.less
@@ -219,7 +219,15 @@ header{
   margin-top: 8/@rem;
   color: #666;
 }
-
+.huodon{
+  float: left;
+  width: 100%;
+  img{
+    float: left;
+    width: 750/@rem;
+    margin: 32/@rem 0 16/@rem 0;
+  }
+}
 
 
 
