--- a/src/str/index/index.less
+++ b/src/str/index/index.less
@@ -211,6 +211,7 @@ header{
 }
 .slide-li-img{
   width: 88/@rem;
+  height: 88/@rem;
 }
 .slide-li-text{
   float: left;
@@ -225,6 +226,7 @@ header{
   img{
     float: left;
     width: 750/@rem;
+    height: 200/@rem;
     margin: 32/@rem 0 16/@rem 0;
   }
 }
