--- a/src/str/download/download.less
+++ b/src/str/download/download.less
@@ -79,3 +79,12 @@ input {
     left: 0;
     top: 760/@rem;
 }
+.alert{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0,0,0,.5);
+    z-index: 2;
+}
